[package]
name = "mmm_construction_site_manager_back"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json", "secrets"] }
# auth
anyhow = "1.0"
reqwest = { version = "0.12.0", default-features = false, features = ["json", "rustls-tls"] }
rocket_oauth2 = { version = "0.5", features = ["hyper_rustls_adapter"] }
# ---------------------------------- Utils --------------------------------- #
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
  
